# rust-book-examples

./: .gitignore
a-half-hour-to-learn-rust/blocks_are_expressions/: Cargo.toml
a-half-hour-to-learn-rust/closures/: Cargo.toml
a-half-hour-to-learn-rust/iter_map_fold/: Cargo.toml
a-half-hour-to-learn-rust/the_use_directives/: Cargo.toml
async-rust/: Cargo.toml
async-rust-book/: Cargo.toml  readme.md
async-rust/ch01-introduction-to-async/: Cargo.toml  data.txt
async-rust/ch01-introduction-to-async/scripts/: prep.sh
async-rust/ch02-basic-async-rust/: Cargo.toml
async-rust/ch03-building-async-queues/: Cargo.toml
async-rust/ch03-building-async-queues/src/: main.rs
async-rust/ch04-integrating-networking/: Cargo.toml
async-rust/ch05-coroutines/: Cargo.toml  numbers.txt
async-rust/ch05-coroutines/examples/: executor.rs  external-control.rs  mimic-async-behavior.rs  simple-generator.rs  stack-coroutines.rs  symmetric-coroutine.rs  test-coroutine.rs
async-rust/ch05-coroutines/src/: main.rs
async-rust/ch06-reactive-heater/: Cargo.toml
async-rust/ch06-reactive-heater/examples/: event-bus.rs  heater.rs
async-rust/ch07-custom-tokio/: Cargo.toml
async-rust/ch07-custom-tokio/examples/: build-a-runtime.rs
async-rust/ch08-the-actor-model/: Cargo.toml
async-rust/ch08-the-actor-model/examples/: basic_actor.rs  router_pattern.rs
async-rust/ch09-design-patterns/: Cargo.toml
async-rust/ch09-design-patterns/examples/: decorator.rs  isolated_module.rs  retry.rs  state_machine.rs  waterfall.rs
async-rust/ch09-design-patterns/src/: async_mod.rs  lib.rs
async-rust/ch10-building-an-async-server/: Cargo.toml
async-rust/ch10-building-an-async-server/async_runtime/examples/: run.rs
async-rust/ch10-building-an-async-server/async_runtime/src/: executor.rs  receiver.rs  sender.rs  sleep.rs  waker.rs
async-rust/ch10-building-an-async-server/client/: Cargo.toml
async-rust/ch10-building-an-async-server/client/src/: main.rs
async-rust/ch10-building-an-async-server/data_layer/src/: data.rs
async-rust/ch10-building-an-async-server/server/: Cargo.toml
async-rust/ch10-building-an-async-server/server/src/: main.rs
black-hat-rust/: Cargo.toml
black-hat-rust/tricoder/: Cargo.toml
black-hat-rust/tricoder/src/: error.rs  main.rs  model.rs  ports.rs  subdomains.rs
command-line-rust/: Cargo.toml
command-line-rust/calr/: Cargo.toml
command-line-rust/calr/src/: lib.rs  main.rs
command-line-rust/calr/tests/: cli.rs
command-line-rust/calr/tests/expected/: 2-2020.txt  2020.txt  4-2020.txt  5-2020.txt
command-line-rust/catr/: Cargo.toml  mk-outs.sh
command-line-rust/catr/src/: lib.rs  main.rs
command-line-rust/catr/tests/: cli.rs
command-line-rust/catr/tests/expected/: all.n.out  all.out  spiders.txt.out
command-line-rust/common/: Cargo.toml
command-line-rust/commr/: Cargo.toml  mk-outs.sh
command-line-rust/cutr/: Cargo.toml
command-line-rust/echor/: Cargo.toml
command-line-rust/findr/: Cargo.toml
command-line-rust/findr/src/: lib.rs
command-line-rust/fortuner/: Cargo.toml
command-line-rust/fortuner/src/: lib.rs  main.rs
command-line-rust/fortuner/tests/: cli.rs
command-line-rust/fortuner/tests/expected/: berra_cap.err  berra_cap.out  twain_cap.out  twain_lower_i.err
command-line-rust/fortuner/tests/inputs/: ascii-art  jokes  literature  quotes
command-line-rust/grepr/: Cargo.toml
command-line-rust/headr/: Cargo.toml
command-line-rust/tailr/: Cargo.toml  mk-outs.sh
command-line-rust/tailr/src/: lib.rs  main.rs
command-line-rust/tailr/tests/: cli.rs
command-line-rust/tailr/tests/expected/: all.c+12.out  all.c+3.out  all.c+8.out  all.c12.out  all.c3.out  all.c8.out  all.n+3.out  all.n+3.q.out  all.n0.out  all.n1.out  all.n1.q.out  all.n3.out  all.n3.q.out  all.out  one.txt.c+2.out  one.txt.c12.out  one.txt.c3.out  one.txt.c8.out  ten.txt.c+2.out  ten.txt.c12.out  ten.txt.c8.out  ten.txt.n+2.out  ten.txt.n3.out  ten.txt.n4.out  three.txt.c+2.out  three.txt.c8.out  three.txt.n+2.out  three.txt.n1.out  two.txt.c+2.out  two.txt.c3.out  two.txt.n+2.out
command-line-rust/uniqr/: Cargo.toml
command-line-rust/uniqr/src/: lib.rs
command-line-rust/wcr/: Cargo.toml
engineering-book/: Cargo.toml  build.rs
engineering-book/benches/: parsing_bench.rs
engineering-book/docs/: ch01-build-scripts-buildrs-in-depth.md  ch02-cross-compilation-one-source-many-target.md  ch04-code-coverage-seeing-what-tests-miss.md
engineering-book/proto/: diagnostics.proto  telemetry.proto
engineering-book/src/: lib.rs  main.rs  version.rs
rust-patterns-book/: Cargo.toml
(+47 files in other folders)
