[workspace]
members = [
    "ch01-introduction-to-async",
    "ch02-basic-async-rust",
    "ch03-building-async-queues",
    "ch04-integrating-networking",
    "ch05-coroutines",
    "ch06-reactive-heater",
    "ch07-custom-tokio",
    "ch08-the-actor-model", "ch09-design-patterns",
    # "ch10-building-an-async-server",
]
resolver = "2"
