[workspace]
members = ["tricoder"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
rayon = "1.8.1"
reqwest = { version = "0.12.7", default-features = false, features = ["json","blocking","rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
trust-dns-resolver = "0.23.2"