[package]
name = "engineering-book"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"

[build-dependencies]
prost-build = { version = "0.13" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "cargo_bench_support"] }

[[bench]]
name = "parsing_bench"
path = "benches/parsing_bench.rs"
harness = false # Use Criterion's harness, not the built-in test harness
