[package]
name = "ch04-integrating-networking"
version = "0.1.0"
edition = "2024"

[dependencies]
async-task = "4.7.1"
flume = "0.11.1"
futures-lite = "2.6.0"
anyhow = "1.0.95"
async-native-tls = "0.5.0"
http = "1.2.0"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
smol = "2.0.2"
tokio = "1.43.0"
http-body-util = "0.1.2"
bytes = "1.9.0"
tower = "0.5.2"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
