[package]
name = "calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.31"
clap = "4.4.16"
common = { version = "0.1.0", path = "../common" }
itertools = "0.12.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
