[package]
name = "catr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "4.4.11", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
predicates = "3.0.4"
rand = "0.8.5"
