[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.16", features = ["default"]}
common = { version = "0.1.0", path = "../common" }
regex = "1.10.2"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
rand = "0.8.5"
